--- a/atkomail-client/src/Switcher.css
+++ b/atkomail-client/src/Switcher.css
@@ -1,3 +1,8 @@
+.switcherCol{
+    padding-left: 0em !important;
+    padding-right: 0em !important;
+}
+
 .ui.inverted.button {
     box-shadow: none !important;
 }
