--- a/atkomail-client/src/Home.css
+++ b/atkomail-client/src/Home.css
@@ -1,3 +1,7 @@
 .appName{
     padding-top: 7.5px !important;
 }
+
+.ui.menu:not(.vertical) .right.item, .ui.menu:not(.vertical) .right.menu {
+    margin-left: 0px !important;
+}
