--- a/atkomail-client/src/Mailbox.css
+++ b/atkomail-client/src/Mailbox.css
@@ -1,3 +1,6 @@
 .ui.list .list > .item a.header, .ui.list > .item a.header {
     color: #00297A !important;
 }
+.address:hover{
+    cursor: pointer;
+}
