Added modal to confirm delete all

--- a/atkomail-client/src/Mailbox.css
+++ b/atkomail-client/src/Mailbox.css
@@ -4,3 +4,10 @@
 .address:hover{
     cursor: pointer;
 }
+
+.ui.modal {
+    text-align: center !important;
+}
+.ui.modal > .actions {
+    text-align: center !important;
+}
